--- a/layout/_partial/nav.pug
+++ b/layout/_partial/nav.pug
@@ -1,10 +1,9 @@
 nav
     ul
-        - var links = ['links', 'about'];
         li(class=is_home() ? 'active':'')
             a(href=config.root) Home
         li(class=is_archive() ? 'active' : '')
             a(href=url_for(config.archive_dir))= titlecase(config.archive_dir)
-        each link in links
+        each link in Object.keys(theme.links)
             li(class=is_current(link) ? 'active' : '')
-                a(href=url_for(link))= titlecase(link)
+                a(href=url_for(theme.links[link]))= titlecase(link)
