--- a/layout/archive.pug
+++ b/layout/archive.pug
@@ -1,5 +1,5 @@
 div#archives
-    ul
+    div
         -
             var data = page.posts.toArray().reduce(function(a, b) {
                 var year = b.date.year();
@@ -11,10 +11,10 @@ div#archives
                 return a;
             }, {});
         each year in Object.keys(data).sort().reverse()
-            .archive-year
+            section.archive-year
                 h2= year
                 ul.archive-posts
                     each post in data[year]
                         li.archive-post
                             a(href=url_for(post.path))= post.title
-!= partial('_partial/paginator')
+    != partial('_partial/paginator')
