--- a/layout/_partial/sidebar.pug
+++ b/layout/_partial/sidebar.pug
@@ -1,17 +1,18 @@
 #sidebar
-    a(href=url_for(config.root))
-        img#logo(src=theme.logo, alt="logo")
+    a#logo(href=url_for(config.root))
+        img(src=theme.logo_small, alt="logo")
     div#site_name
         a(href=url_for(config.root))= config.title
     div.fat
         #site_description= config.description
         #socials
-            a(href=theme.github)
+            a(href=theme.github, title="GitHub")
                 i.fa.fa-github(aria-hidden="true")
-            a(href=url_for("atom.xml"))
+            a(href=url_for("atom.xml"), title="Feed")
                 i.fa.fa-rss(aria-hidden="true")
             a(href="#")
                 i.fa.fa-transgender(aria-hidden="true")
     #copyright
-        p Power by Hexo
-        p Theme by &copy; #{config.author}
+        p Power by #[a(href="https://hexo.io") Hexo]
+        p Theme by #[a(target="_blank", href="https://github.com/lingmm/hexo-theme-amethyst") Amethyst]
+        p #[a(href="http://www.miitbeian.gov.cn/", rel="nofollow", target="_blank") 豫ICP备15030578号-1] | #[a(href="https://creativecommons.org/licenses/by-nc-sa/4.0/", rel="nofollow", target="_blank") CC BY-NC-SA 4.0]
