--- a/source/_styl/_partial/articles.styl
+++ b/source/_styl/_partial/articles.styl
@@ -15,7 +15,7 @@
     .article__info
       color #bbb
       font-size 12px
-      margin-top 15px
+      margin 20px 0
       display flex
       align-items center
       & > span
