--- a/source/_styl/_partial/responsive.styl
+++ b/source/_styl/_partial/responsive.styl
@@ -31,7 +31,7 @@
     #articles
       padding-left 0
     #post
-      margin 0 $body-margin
+      margin 0 0
       padding 0
       #disqus_thread
         margin-right 0
