--- a/source/_styl/_partial/global.styl
+++ b/source/_styl/_partial/global.styl
@@ -25,7 +25,7 @@ body
   animation slowShow 1s cubic-bezier(0, 0, 0.2, 1)
 
 .paginator
-  padding 40px 0
+  margin 40px 0
   text-align center
   position relative
   a, span
